# web-app1

./: .env  .gcloudignore  .gitignore  README.md  cloudbuild.yaml
.docker/app_builder/: Dockerfile
app/: Cargo.toml  Dockerfile
app/src/: main.rs
docker/app/: Dockerfile
frontend/: Dockerfile  package.json  tsconfig.json  webpack.devserver.js  webpack.prod.js  webpack.shared.js
frontend/.nginx/: default.conf
frontend/public/: index.html
frontend/src/: App.tsx  index.tsx
