[package]
name = "app"
version = "0.1.0"
authors = ["Takahito Hashimoto <ta.li.ryu.1994@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0.0"
actix-rt = "1.1.1"
serde = "1.0.115"
env_logger = "0.7.1"
